# TinyFace

./: .gitignore  CHANGELOG.md  README.md  change.ipynb  pyproject.toml
tinyface/: __init__.py  config.py  download.py  inference.py  typing.py  utils.py
tinyface/cli/: __init__.py  filesystem.py  image.py  tasks.py  version.py
tinyface/cli/commands/: swap.py
tinyface/core/: detector.py  embedder.py  enhancer.py  swapper.py
